--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -10,5 +10,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        push: true
+        tags: ${{ secrets.DOCKER_USERNAME }}/spam-detection-api:latest
+
     - name: Deploy to Cloud
-      run: echo "Déploiement en cours..."
+      run: |
+        echo "🚀 Image Docker poussée ! Mise à jour du déploiement en cours..."
+        # Ici vous ajouteriez vos commandes kubectl ou Railway
+
